1999-04-17  Matthias Clasen  <clasen@mathematik.uni-freiburg.de>

	* fvwm/screen.h (ScreenInfo): new member for go struct:
	RaiseHackNeeded.

	* fvwm/fvwm.c (InitVariables): initialize Scr.go.RaiseHackNeeded
	based on the ServerVendor string.

	* fvwm/misc.c (RaiseWindow): use the hack for raising over
	NT windows if Scr.go.RaiseHackNeeded is set.

	* fvwm/builtins.c (SetGlobalOptions): allow to set 
	Scr.go.RaiseHackNeeded with the global options
	RaiseOverNativeWindows/IgnoreNativeWindows.

	* fvwm/fvwm2.1: Document the new global options
	RaiseOverNativeWindows/IgnoreNativeWindows.	

	* fvwm/fvwm.c:
	* fvwm/builtins.c:
	* fvwm/events.c:
	* fvwm/screen.h: remove NON_VIRTUAL.

	* fvwm/virtual.c (HandlePaging): ensure that HandlePaging
	doesn't return false unless it really did change the viewport,
	ie called MoveViewPort with nonzero delta_x, delta_y. The 
	previous logic could also return true if the pointer stayed
	long enough on a pan frame where paging is not possible.

Sat Apr 17 13:55:41 1999  Steve Robbins  <steve@nyongwa.montreal.qc.ca>

	* fvwm/module.c (SETOLDFLAGS): fixed several dozen "statements
 	with no effect".

	* fvwm/functions.c (ExecuteFunction): removed unused variable, add
 	parentheses in `if' condition

1999-04-17  Dominik Vogt  <dominik_vogt@gmx.de>

	* fvwm/resize.c (resize_window): fixed resize-loosing-grip bug

	* fvwm/functions.c (func_config):
	* fvwm/functions.h (FunctionItem):
	(struct functions):
 	added FUNC_DONT_REPEAT flag to functions structure, changed Bool
	f_needs_window/func_needs_window to unsigned char flags

	* fvwm/parse.h (enum): added F_UNDEFINED define needed by repeat
	function

1999-04-17  Matthias Clasen  <clasen@mathematik.uni-freiburg.de>

	* fvwm/screen.h (TOP_EDGE): 
	(RIGHT_EDGE): 
	(BOTTOM_EDGE): 
	(LEFT_EDGE): separate cursor types for the pan frames.

	* fvwm/fvwm.c (CreateCursors): initialize the _EDGE cursors
	to be the same as the non-_EDGE ones.
